syntax = "proto3";

package messages.device_list;

option go_package = "farm/src/proto/messages/device_list";

message GetDeviceListRequest {
}

message GetDeviceListResponse {
  repeated Device devices =1;
}

message Device {
  string phone=1;
  uint32 farmId=2;
  string deviceName=3;
  string deviceSerial=4;
}
